--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="theme-color" content="#000000" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <meta
